# malloc_hook

./: CMakeLists.txt  ChangeLog.md  LICENSE  README.md  malloc_hook.c  malloc_hook.h  malloc_hook_test.cpp  mtrace.c
tests/: malloc_hook_test.cpp  mtrace_test.cpp
tools/: analyze_mtrace.rb
